third try to workload

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,21 +56,20 @@ jobs:
           context: .
           file: Dockerfile
           push: true
+          no-cache: true # Fuerza rebuild sin cache para refresh completo
           platforms: ${{ env.BUILD_PLATFORMS }}
           tags: |
             ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:latest
-            ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
-          cache-from: type=registry,ref=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:buildcache
-          cache-to: type=registry,ref=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:buildcache,mode=max
+          cache-from: type=registry,ref=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:latest
+          cache-to: type=inline
 
-      - name: Clean up old ECR images
+      - name: Delete old untagged images in ECR
         run: |
-          # List images and delete all except the latest 5 to prevent accumulation
-          IMAGES=$(aws ecr list-images --repository-name ${{ env.ECR_REPOSITORY }} --query 'imageIds[?imageTag!=`latest` && imageTag!=`${{ env.IMAGE_TAG }}`]' --output json)
-          if [[ -n "$IMAGES" && "$IMAGES" != "[]" ]]; then
-            aws ecr batch-delete-image --repository-name ${{ env.ECR_REPOSITORY }} --image-ids "$IMAGES" --region ${{ env.AWS_REGION }}
-          else
-            echo "No old images to delete"
+          # List untagged images
+          IMAGE_IDS=$(aws ecr list-images --repository-name ${{ env.ECR_REPO }} --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json)
+          if [ "$IMAGE_IDS" != "[]" ]; then
+            # Borra en batch
+            aws ecr batch-delete-image --repository-name ${{ env.ECR_REPO }} --image-ids "$IMAGE_IDS"
           fi
 
   deploy:
@@ -101,26 +100,30 @@ jobs:
           set -euo pipefail
           echo "Deploying $ECR_REGISTRY/$ECR_REPO:latest to $EC2_INSTANCE_ID"
 
-          if [[ -z "${{ vars.ENV }}" ]]; then
+          if [[ -z "${{ secrets.ENV }}" ]]; then
             echo "❌ ENV secret is empty or not set"
             exit 1
           fi
 
+          # Encode .env content to base64 for safe multiline handling
+          DOTENV_BASE64=$(echo -n '${{ secrets.ENV }}' | base64 -w 0)
+
           CMDS=$(jq -nc --arg reg "$ECR_REGISTRY" \
             --arg repo "$ECR_REPO" \
+            --arg tag "$IMAGE_TAG" \
             --arg region "$AWS_REGION" \
             --arg port "${EXTERNAL_PORT}" \
             --arg name "$CONTAINER_NAME" \
-            --arg dotenv "${{ vars.ENV }}" \
+            --arg dotenv_base64 "$DOTENV_BASE64" \
             '
           [
             "aws ecr get-login-password --region \($region) | docker login --username AWS --password-stdin \($reg)",
-            "docker pull \($reg)/\($repo):latest",
+            "docker pull \($reg)/\($repo):\($tag)",
             "docker stop \($name) || true",
             "docker rm \($name) || true",
-            "echo \($dotenv) > .env",
-            "docker run -d --name \($name) -p \($port):3000 --env-file .env --restart unless-stopped \($reg)/\($repo):latest",
-            "rm .env",
+            "echo \($dotenv_base64) | base64 -d > .env",
+            "docker run -d --name \($name) -p \($port):3000 --env-file .env --restart unless-stopped \($reg)/\($repo):\($tag)",
+            "rm .env",  
             "docker image prune -f"
           ]')
 
@@ -131,7 +134,7 @@ jobs:
             --parameters "commands=$CMDS" \
             --output text \
             --query "Command.CommandId")
-          echo "▶SSM CommandId"
+          echo "▶ SSM CommandId = $CMD_ID"
 
           aws ssm wait command-executed --command-id "$CMD_ID" --instance-id "$EC2_INSTANCE_ID"
 
