--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,7 @@ on:
       - 'Dockerfile'
       - 'package.json'
       - 'package-lock.json'
+      - 'tsconfig.json'
       - 'src/**'
       - '.github/workflows/**'
       - 'global-bundle.pem.enc'
