--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,10 @@ on:
       - '.github/workflows/**'
       - 'global-bundle.pem.enc'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   BUILD_PLATFORMS: linux/arm64
   CACHE_TAG: buildcache
@@ -20,6 +24,9 @@ jobs:
   build:
     name: Build & Push Docker image
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    permissions:
+      contents: read
     environment: devops_aws
     env:
       AWS_REGION: ${{ vars.AWS_REGION }}
@@ -48,8 +55,11 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Desencriptar global-bundle.pem.enc
+      # Si necesitas el bundle para conexiones SSL (no es secreto, pero el pass sí):
+      - name: Decrypt global-bundle.pem.enc
+        if: hashFiles('global-bundle.pem.enc') != ''
         run: |
+          set -euo pipefail
           openssl enc -aes-256-cbc -d -salt -in global-bundle.pem.enc -out global-bundle.pem -pass pass:"${{ secrets.PASSPHRASE }}"
 
       - name: Build & Push (with cache)
@@ -58,7 +68,6 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          no-cache: true
           platforms: ${{ env.BUILD_PLATFORMS }}
           tags: |
             ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:latest
@@ -68,16 +77,25 @@ jobs:
 
       - name: Delete old untagged images in ECR
         run: |
-          IMAGE_IDS=$(aws ecr list-images --repository-name ${{ env.ECR_REPO }} --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json)
+          set -euo pipefail
+          IMAGE_IDS=$(aws ecr list-images \
+            --repository-name "${{ env.ECR_REPO }}" \
+            --filter tagStatus=UNTAGGED \
+            --query 'imageIds[*]' --output json)
           if [ "$IMAGE_IDS" != "[]" ]; then
-            aws ecr batch-delete-image --repository-name ${{ env.ECR_REPO }} --image-ids "$IMAGE_IDS"
+            aws ecr batch-delete-image \
+              --repository-name "${{ env.ECR_REPO }}" \
+              --image-ids "$IMAGE_IDS"
           fi
 
   deploy:
     name: Deploy to EC2 via SSM
     needs: build
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     environment: devops_aws
+    permissions:
+      contents: read
     env:
       AWS_REGION: ${{ vars.AWS_REGION }}
       ECR_REGISTRY: ${{ vars.ECR_REGISTRY }}
@@ -87,6 +105,7 @@ jobs:
       EXTERNAL_PORT: ${{ vars.EXTERNAL_PORT }}
       CONTAINER_NAME: back_results
       IMAGE_TAG: ${{ github.sha }}
+      SSM_ENV_PARAM_NAME: ${{ vars.SSM_ENV_PARAM_NAME }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -95,79 +114,75 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Deploy container via SSM
+      - name: Deploy container using SSM
         id: ssm
         shell: bash
         run: |
           set -euo pipefail
-          echo "📦 Deploying $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG to $EC2_INSTANCE_ID"
+          echo "Deploying…"
 
-          if [[ -z "${{ vars.ENV_DEV }}" ]]; then
-            echo "❌ ENV secret is empty or not set"
-            exit 1
-          fi
-
-          DOTENV_BASE64=$(echo -n '${{ vars.ENV_DEV }}' | base64 -w 0)
-          echo "DOTENV_BASE64 length: ${#DOTENV_BASE64}"  # Depuración: Muestra longitud para confirmar no vacío
-
-          CMDS=$(jq -nc --arg reg "$ECR_REGISTRY" \
-            --arg repo "$ECR_REPO" \
-            --arg tag "$IMAGE_TAG" \
+          CMDS=$(jq -nc \
+            --arg reg    "$ECR_REGISTRY" \
+            --arg repo   "$ECR_REPO" \
+            --arg tag    "$IMAGE_TAG" \
             --arg region "$AWS_REGION" \
-            --arg port "${EXTERNAL_PORT}" \
-            --arg name "$CONTAINER_NAME" \
-            --arg dotenv_base64 "$DOTENV_BASE64" \
-            '
-          [
-            "aws ecr get-login-password --region \($region) | docker login --username AWS --password-stdin \($reg)",
-            "docker pull --quiet \($reg)/\($repo):\($tag)",
-            "docker stop \($name) || true",
-            "docker rm \($name) || true",
-            "echo \($dotenv_base64) | base64 -d > .env",
-            "cat .env",
-            "docker run -d --name \($name) -p \($port):3000 --env-file .env --restart unless-stopped \($reg)/\($repo):\($tag)",
-            "rm .env",
-            "ls .env || echo \".env deleted\"",
-            "docker image prune -f"
-          ]')
+            --arg port   "${EXTERNAL_PORT}" \
+            --arg name   "$CONTAINER_NAME" \
+            --arg ssm    "$SSM_NAME" \
+            '[
+              "aws ecr get-login-password --region \($region) | docker login --username AWS --password-stdin \($reg)",
+              "docker pull --quiet \($reg)/\($repo):\($tag)",
+              "docker stop \($name) || true",
+              "docker rm \($name) || true",
+              "aws ssm get-parameter --name \($ssm) --with-decryption --query Parameter.Value --output text > .env",
+              "docker run -d --name \($name) -p \($port):3000 --env-file .env --restart unless-stopped \($reg)/\($repo):\($tag)",
+              "shred -u .env || rm -f .env",
+              "docker image prune -f"
+            ]')
 
           CMD_ID=$(aws ssm send-command \
             --instance-ids "$EC2_INSTANCE_ID" \
             --document-name "AWS-RunShellScript" \
             --comment "GitHub Actions deploy" \
             --parameters "commands=$CMDS" \
-            --output text \
-            --query "Command.CommandId")
+            --query "Command.CommandId" --output text)
+
           echo "▶️ SSM CommandId = $CMD_ID"
 
-          aws ssm wait command-executed --command-id "$CMD_ID" --instance-id "$EC2_INSTANCE_ID"
+          aws ssm wait command-executed \
+            --command-id "$CMD_ID" \
+            --instance-id "$EC2_INSTANCE_ID"
 
           aws ssm get-command-invocation \
-            --command-id "$CMD_ID" --instance-id "$EC2_INSTANCE_ID" \
+            --command-id "$CMD_ID" \
+            --instance-id "$EC2_INSTANCE_ID" \
             --query "{Stdout:StandardOutputContent, Stderr:StandardErrorContent, Status:Status}" \
             --output text | sed 's/\\n/\n/g'
 
           STATUS=$(aws ssm get-command-invocation \
-            --command-id "$CMD_ID" --instance-id "$EC2_INSTANCE_ID" \
+            --command-id "$CMD_ID" \
+            --instance-id "$EC2_INSTANCE_ID" \
             --query Status --output text)
+
           [[ "$STATUS" == "Success" ]] || { echo "❌ Remote script failed"; exit 1; }
 
       - name: Health check loop
         shell: bash
         run: |
           set -euo pipefail
-          stdbuf -oL -eL echo "🔎 Comprobando http://${PUBLIC_IP}:${EXTERNAL_PORT}/"
-          for i in {1..24}; do # = 2 minutos máx.
-            http_code=$(curl -s -o /dev/null -w '%{http_code}' \
-              --max-time 5 \
+          echo "Testing http://${PUBLIC_IP}:${EXTERNAL_PORT}/"
+          for i in {1..24}; do
+            http_code=$(curl -s -o /dev/null -w '%{http_code}' --max-time 5 \
               "http://${PUBLIC_IP}:${EXTERNAL_PORT}/") || true
-            if [[ "$http_code" == "200" ]]; then
-              echo "✅ Servicio OK (${http_code})"; exit 0
+            if [[ "${http_code:-}" == "200" ]]; then
+              echo "✅ Servicio OK (${http_code})"
+              exit 0
             fi
             echo "⏳ intento $i/24 — code=${http_code:-timeout}"
             sleep 5
           done
-          echo "❌ Health‑check failed, dumping container logs"
+
+          echo " Health-check failed :("
           aws ssm send-command \
             --instance-ids "$EC2_INSTANCE_ID" \
             --document-name "AWS-RunShellScript" \
