--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -120,7 +120,7 @@ jobs:
         run: |
           set -euo pipefail
           echo "Deploying…"
-          SSM_NAME="${SSM_ENV_PARAM_NAME}"
+          SSM_NAME="${SSM_ENV_PARAM_NAME:-/miapp/dev/.env}"
 
           CMDS=$(jq -nc \
             --arg reg    "$ECR_REGISTRY" \
