--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,7 +55,7 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # SIEMPRE descifrar el bundle antes de construir la imagen
+      # Desencripta SIEMPRE antes del build para que la imagen lo copie
       - name: Decrypt global-bundle.pem.enc
         run: |
           set -euo pipefail
@@ -66,16 +66,15 @@ jobs:
             -in global-bundle.pem.enc \
             -out global-bundle.pem \
             -pass pass:"${{ secrets.PASSPHRASE }}"
-          # Un hash para verificar que cambia invalida cache
           echo "BUNDLE_SHA256=$(sha256sum global-bundle.pem | cut -d' ' -f1)"
 
-      - name: Build & Push (with cache bust)
+      - name: Build & Push (cache bust to include fresh bundle)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: Dockerfile
           push: true
-          no-cache: true # fuerza incluir bundle recién descifrado
+          no-cache: true
           platforms: ${{ env.BUILD_PLATFORMS }}
           tags: |
             ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:latest
@@ -122,37 +121,83 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Deploy container using SSM
+      - name: Deploy container using SSM (safe heredoc + jq)
         id: ssm
         shell: bash
         run: |
           set -euo pipefail
-          echo "Deploying…"
+          SSM_NAME="${SSM_ENV_PARAM_NAME:-/miapp/dev/.env}"
+          echo "Deploying ${ECR_REGISTRY}/${ECR_REPO}:${IMAGE_TAG} to ${EC2_INSTANCE_ID}"
+          echo "Usando parámetro SSM: ${SSM_NAME}"
 
-          SSM_NAME="${SSM_ENV_PARAM_NAME}"
-          echo "Usando parámetro SSM: $SSM_NAME"
+          # 1) Prepara el script remoto como texto (variables expanden AQUÍ, no en el remoto)
+          cat > remote_cmds.txt <<EOF
+set -euo pipefail
+aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_REGISTRY}
+docker pull --quiet ${ECR_REGISTRY}/${ECR_REPO}:${IMAGE_TAG}
+docker stop ${CONTAINER_NAME} || true
+docker rm ${CONTAINER_NAME} || true
+aws ssm get-parameter --name ${SSM_NAME} --with-decryption --query Parameter.Value --output text > .env
+sed -i 's/\r$//' .env
+echo "ENV bytes=\$(wc -c < .env) lines=\$(wc -l < .env)"
+docker run -d --name ${CONTAINER_NAME} -p ${EXTERNAL_PORT}:3000 --env-file .env -e NODE_EXTRA_CA_CERTS=/app/global-bundle.pem --restart unless-stopped ${ECR_REGISTRY}/${ECR_REPO}:${IMAGE_TAG}
+sleep 2
+# Verificaciones (no imprimen secretos)
+docker exec ${CONTAINER_NAME} /bin/sh -lc 'set -e; [ -f /app/global-bundle.pem ] && echo "bundle OK" && ls -l /app/global-bundle.pem && sha256sum /app/global-bundle.pem | cut -c1-16 || (echo "bundle MISSING"; exit 1)'
+docker exec ${CONTAINER_NAME} /bin/sh -lc 'env | grep -E "^(MONGODB_URI|MONGODB_USERNAME|MONGODB_PASSWORD|NODE_EXTRA_CA_CERTS)=" | sed "s/=.*/=[REDACTED]/"'
+# Imprime Cmd/Entrypoint para confirmar que NO es un nginx accidental
+docker inspect --format="Name={{.Name}} Image={{.Config.Image}} Cmd={{.Config.Cmd}} Entrypoint={{.Config.Entrypoint}}" ${CONTAINER_NAME} || true
+docker image inspect ${ECR_REGISTRY}/${ECR_REPO}:${IMAGE_TAG} --format 'RepoDigests: {{json .RepoDigests}} Cmd: {{json .Config.Cmd}} Entrypoint: {{json .Config.Entrypoint}}' || true
+shred -u .env || rm -f .env
+docker image prune -f
+EOF
 
-          CMDS=$(jq -nc \
-            --arg reg    "$ECR_REGISTRY" \
-            --arg repo   "$ECR_REPO" \
-            --arg tag    "$IMAGE_TAG" \
-            --arg region "$AWS_REGION" \
-            --arg port   "${EXTERNAL_PORT}" \
-            --arg name   "$CONTAINER_NAME" \
-            --arg ssm    "$SSM_NAME" \
-            '[
-              "set -euo pipefail",
-              "aws ecr get-login-password --region \($region) | docker login --username AWS --password-stdin \($reg)",
-              "docker pull --quiet \($reg)/\($repo):\($tag)",
-              "docker stop \($name) || true",
-              "docker rm \($name) || true",
-              # ↓ Obtener .env y normalizar saltos de línea (CRLF -> LF)
-              "aws ssm get-parameter --name \($ssm) --with-decryption --query Parameter.Value --output text > .env",
-              "sed -i \"s/\\r$//\" .env",
-              "echo \"ENV bytes=$(wc -c < .env) lines=$(wc -l < .env)\"",
-              # ↓ Ejecutar contenedor inyectando .env y asegurando CA bundle
-              "docker run -d --name \($name) -p \($port):3000 --env-file .env -e NODE_EXTRA_CA_CERTS=/app/global-bundle.pem --restart unless-stopped \($reg)/\($repo):\($tag)",
-              # ↓ Chequeos dentro del contenedor (sin exponer secretos)
-              "sleep 2",
-              "docker exec \($name) /bin/sh -lc 'set -e; [ -f /app/global-bundle.pem ] && echo \"bundle OK\" && ls -l /app/global-bundle.pem && sha256sum /app/global-bundle.pem | cut -c1-16 || (echo \"bundle MISSING\"; exit 1)'",
-              "docker exec \($name) /bin/sh -lc 'env | grep -E \"^(MONGODB_URI|MONGODB_USERNAME|MONGODB_PASSWORD|NODE_EXTRA_CA_CERTS)=\" | sed \"s/=.*/=[REDACTED]/\*
+          # 2) Convierte a arreglo JSON para SSM (cada línea = un comando)
+          CMDS_JSON=$(jq -R -s -c 'split("\n") | map(select(length>0))' < remote_cmds.txt)
+
+          # 3) Ejecuta en la instancia
+          CMD_ID=$(aws ssm send-command \
+            --instance-ids "${EC2_INSTANCE_ID}" \
+            --document-name "AWS-RunShellScript" \
+            --comment "GitHub Actions deploy" \
+            --parameters "commands=${CMDS_JSON}" \
+            --query "Command.CommandId" --output text)
+
+          echo "▶️ SSM CommandId = ${CMD_ID}"
+          aws ssm wait command-executed --command-id "${CMD_ID}" --instance-id "${EC2_INSTANCE_ID}"
+
+          aws ssm get-command-invocation \
+            --command-id "${CMD_ID}" \
+            --instance-id "${EC2_INSTANCE_ID}" \
+            --query "{Stdout:StandardOutputContent, Stderr:StandardErrorContent, Status:Status}" \
+            --output text | sed 's/\\n/\n/g'
+
+          STATUS=$(aws ssm get-command-invocation \
+            --command-id "${CMD_ID}" \
+            --instance-id "${EC2_INSTANCE_ID}" \
+            --query Status --output text)
+          [[ "${STATUS}" == "Success" ]] || { echo "❌ Remote script failed"; exit 1; }
+
+      - name: Health check loop
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "Testing http://${PUBLIC_IP}:${EXTERNAL_PORT}/"
+          for i in {1..24}; do
+            http_code=$(curl -s -o /dev/null -w '%{http_code}' --max-time 5 "http://${PUBLIC_IP}:${EXTERNAL_PORT}/") || true
+            if [[ "${http_code:-}" == "200" ]]; then
+              echo "✅ Servicio OK (${http_code})"
+              exit 0
+            fi
+            echo "⏳ intento $i/24 — code=${http_code:-timeout}"
+            sleep 5
+          done
+
+          echo "❌ Health-check failed, dumping container logs"
+          aws ssm send-command \
+            --instance-ids "$EC2_INSTANCE_ID" \
+            --document-name "AWS-RunShellScript" \
+            --parameters commands="docker logs --tail 200 $CONTAINER_NAME" \
+            --query "Command.CommandId" --output text \
+          | xargs -I{} aws ssm wait command-executed --command-id {} --instance-id "$EC2_INSTANCE_ID"
+          exit 1
